--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,17 +10,24 @@
 
   <ion-header>
     <ion-navbar>
-      <ion-buttons start>
+
+      <ion-buttons end>
         <button (click)="openLogin()" ion-button icon-only>
           <ion-icon color="primary" name="contact"></ion-icon>
         </button>
-      </ion-buttons>
 
-      <ion-buttons end>
         <button (click)="openRegister()" ion-button icon-only>
           <ion-icon color="primary" name="person-add"></ion-icon>
         </button>
+
+        <button (click)="openQuery()" ion-button icon-only>
+            <ion-icon color="primary" name="search"></ion-icon>
+          </button>
+
       </ion-buttons>
+
+
+
     </ion-navbar>
   </ion-header>
 
