query and list module

--- a/src/pages/query/query.html
+++ b/src/pages/query/query.html
@@ -8,66 +8,22 @@
 
 <ion-content padding>
 
-    <ion-list no-lines>
+    <ion-list>
         <ion-item>
             <ion-label>
-                <ion-icon name="star"></ion-icon> Customer Level</ion-label>
-            <ion-select [(ngModel)]="vip">
-                <ion-option value="vip0">VIP 0</ion-option>
-                <ion-option value="vip1">VIP 1</ion-option>
-                <ion-option value="vip2">VIP 2</ion-option>
-                <ion-option value="vip3">VIP 3</ion-option>
-            </ion-select>
+                <ion-icon name="call"></ion-icon> Mobile number:
+            </ion-label>
+            <ion-input [(ngModel)]="mobile"></ion-input>
         </ion-item>
 
         <ion-item>
             <ion-label>
-                <ion-icon name="star"></ion-icon> Customer Level</ion-label>
-            <ion-select [(ngModel)]="vip">
-                <ion-option value="vip0">VIP 0</ion-option>
-                <ion-option value="vip1">VIP 1</ion-option>
-                <ion-option value="vip2">VIP 2</ion-option>
-                <ion-option value="vip3">VIP 3</ion-option>
-            </ion-select>
-        </ion-item>
-
-
-        <ion-item>
-            <ion-label>
-                <ion-icon name="star"></ion-icon> Customer Level</ion-label>
-            <ion-select [(ngModel)]="vip">
-                <ion-option value="vip0">VIP 0</ion-option>
-                <ion-option value="vip1">VIP 1</ion-option>
-                <ion-option value="vip2">VIP 2</ion-option>
-                <ion-option value="vip3">VIP 3</ion-option>
-            </ion-select>
-        </ion-item>
-
-
-        <ion-item>
-            <ion-label>
-                <ion-icon name="star"></ion-icon> Customer Level</ion-label>
-            <ion-select [(ngModel)]="vip">
-                <ion-option value="vip0">VIP 0</ion-option>
-                <ion-option value="vip1">VIP 1</ion-option>
-                <ion-option value="vip2">VIP 2</ion-option>
-                <ion-option value="vip3">VIP 3</ion-option>
-            </ion-select>
-        </ion-item>
-
-
-        <ion-item>
-            <ion-label>
-                <ion-icon name="star"></ion-icon> Customer Level</ion-label>
-            <ion-select [(ngModel)]="vip">
-                <ion-option value="vip0">VIP 0</ion-option>
-                <ion-option value="vip1">VIP 1</ion-option>
-                <ion-option value="vip2">VIP 2</ion-option>
-                <ion-option value="vip3">VIP 3</ion-option>
-            </ion-select>
+                <ion-icon name="calendar"></ion-icon> Register date:</ion-label>
+            <ion-datetime displayFormat="YYYY-MM-DD" max="2020-12-31" pickerFormat="YYYY-MM-DD" [(ngModel)]="reg_date"></ion-datetime>
         </ion-item>
     </ion-list>
 
-    <button ion-button full color="primary">Find customers</button>
+
+    <button (click)="query()" ion-button full color="primary">Find customers</button>
 
 </ion-content>
