--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -45,7 +45,7 @@
         </ion-item>
 
         <ion-item>
-            <ion-label><ion-icon name="calendar"></ion-icon>Birth</ion-label>
+            <ion-label>Birth</ion-label>
                 <ion-datetime displayFormat="YYYY-MM-DD" max="2020-12-31" pickerFormat="YYYY-MM-DD" [(ngModel)]="birth"></ion-datetime>
         </ion-item>
 
