--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -15,8 +15,8 @@
     <ion-list>
 
         <ion-item>
-            <ion-label fixed>Mobile</ion-label>
-            <ion-input type="text" [(ngModel)]="mobile"></ion-input>
+            <ion-label fixed>Email</ion-label>
+            <ion-input type="text" [(ngModel)]="email"></ion-input>
         </ion-item>
 
         <ion-item>
