login page change
login page change

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -9,7 +9,7 @@
 <ion-content padding>
 
     <ion-card>
-        <img src="../../assets/imgs/login.jpg" />
+        <img src="../../assets/imgs/login.png" />
     </ion-card>
 
     <ion-list>
@@ -27,6 +27,6 @@
 
     </ion-list>
 
-    <button (click)="login()" ion-button full color="primary">Login</button>
+    <button (click)="login()" ion-button full color="dark">Login</button>
 
 </ion-content>
