replace customer to user in list

--- a/src/pages/customer-view/customer-view.html
+++ b/src/pages/customer-view/customer-view.html
@@ -16,19 +16,19 @@
 
         <p class="card-title">
             <ion-label>
-                <ion-icon color="primary" name="star"></ion-icon> Customer id: {{customer._id}}
+                <ion-icon color="primary" name="star"></ion-icon> Id: {{user._id}}
             </ion-label>
         </p>
 
         <p class="card-title">
             <ion-label>
-                <ion-icon color="primary" name="call"></ion-icon> Customer mobile: {{customer.mobile}}
+                <ion-icon color="primary" name="call"></ion-icon> Mobile: {{user.mobile}}
             </ion-label>
         </p>
 
         <p class="card-title">
             <ion-label>
-                <ion-icon color="primary" name="calendar"></ion-icon> Customer mobile: {{customer.reg_date}}
+                <ion-icon color="primary" name="calendar"></ion-icon> Register date: {{user.reg_date}}
             </ion-label>
         </p>
 
