--- a/src/pages/customer-list/customer-list.html
+++ b/src/pages/customer-list/customer-list.html
@@ -1,23 +1,37 @@
 <ion-header>
-  
-   <ion-navbar color="dark">
-     <ion-title>Customer List</ion-title>
-   </ion-navbar>
-  
- </ion-header>
-  
-  
- <ion-content>
-  
-   <ion-card  (click)="viewCutomer(customer)" *ngFor="let customer of customers">
-       <!-- <img class="header" src="../../assets/imgs/vip.png" /> -->
-       <!-- [class: card-title-container] is important for display data -->
-       <div class="card-title-container">
-         <p class="card-title"><ion-icon name="call"></ion-icon>{{customer.mobile}}</p>
 
-         <p class="customer-description"><ion-icon name="calendar"></ion-icon> {{customer.reg_date}}</p>
-       </div>
+  <ion-navbar color="dark">
+    <ion-title>Search result</ion-title>
+  </ion-navbar>
 
-   </ion-card>
-  
- </ion-content>
+</ion-header>
+
+
+<ion-content>
+  <ion-list>
+    <ion-item outline *ngFor="let user of users">
+      <ion-thumbnail item-start>
+        <img src="../../assets/imgs/list.jpg" />
+      </ion-thumbnail>
+      <h2><ion-icon name="mail"></ion-icon> {{user.email}}</h2>
+      <h3><ion-icon name="star"></ion-icon> {{user.serial}}</h3>
+      <h3><ion-icon name="person"></ion-icon> {{user.firstname + " " + user.lastname}}</h3>
+      <h3><ion-icon name="phone-portrait"></ion-icon> {{user.mobile}}</h3>
+      <button ion-button clear item-end (click)="viewUser(user)">View</button>
+    </ion-item>
+  </ion-list>
+
+  <!-- <ion-card (click)="viewCutomer(customer)" *ngFor="let customer of customers"> -->
+  <!-- <img class="header" src="../../assets/imgs/vip.png" /> -->
+  <!-- [class: card-title-container] is important for display data -->
+  <!-- <div class="card-title-container"> -->
+  <!-- <p class="card-title">
+        <ion-icon name="call"></ion-icon>{{customer.mobile}}</p>
+
+      <p class="customer-description">
+        <ion-icon name="calendar"></ion-icon> {{customer.reg_date}}</p>
+    </div>
+
+  </ion-card> -->
+
+</ion-content>
