--- a/src/pages/query/query.html
+++ b/src/pages/query/query.html
@@ -1,29 +1,53 @@
 <ion-header>
 
     <ion-navbar color="dark">
-        <ion-title>Find customers</ion-title>
+        <ion-title>Search users</ion-title>
     </ion-navbar>
 
 </ion-header>
 
 <ion-content padding>
 
+    <ion-card>
+        <img src="../../assets/imgs/query.jpg" />
+    </ion-card>
+
     <ion-list>
+
         <ion-item>
-            <ion-label>
-                <ion-icon name="call"></ion-icon> Mobile number:
-            </ion-label>
+            <ion-label fixed>Email:</ion-label>
+            <ion-input [(ngModel)]="email"></ion-input>
+        </ion-item>
+
+        <ion-item>
+            <ion-label fixed>S/N:</ion-label>
+            <ion-input type="text" [(ngModel)]="serial"></ion-input>
+        </ion-item>
+
+        <ion-item>
+            <ion-label fixed>First name:</ion-label>
+            <ion-input type="text" [(ngModel)]="firstname"></ion-input>
+        </ion-item>
+
+        <ion-item>
+            <ion-label fixed>Last name:</ion-label>
+            <ion-input type="text" [(ngModel)]="lastname"></ion-input>
+        </ion-item>
+
+        <ion-item>
+            <ion-label fixed>Mobile:</ion-label>
             <ion-input [(ngModel)]="mobile"></ion-input>
         </ion-item>
 
-        <ion-item>
+        <!-- <ion-item>
             <ion-label>
                 <ion-icon name="calendar"></ion-icon> Register date:</ion-label>
             <ion-datetime displayFormat="YYYY-MM-DD" max="2020-12-31" pickerFormat="YYYY-MM-DD" [(ngModel)]="reg_date"></ion-datetime>
-        </ion-item>
+        </ion-item> -->
+
     </ion-list>
 
 
-    <button (click)="query()" ion-button full color="primary">Find customers</button>
+    <button (click)="query()" ion-button full color="dark">Search</button>
 
 </ion-content>
