--- a/src/pages/customer-view/customer-view.html
+++ b/src/pages/customer-view/customer-view.html
@@ -1,7 +1,7 @@
 <ion-header>
 
     <ion-navbar color="dark">
-        <ion-title>Customer detail</ion-title>
+        <ion-title>User detail</ion-title>
     </ion-navbar>
 
 </ion-header>
