--- a/src/pages/projects/projects.html
+++ b/src/pages/projects/projects.html
@@ -13,9 +13,11 @@
     </ion-card>
 
     <ion-list>
-    </ion-list>
+            <ion-item>
+            </ion-item>
+          </ion-list>
 
 
-    <!-- <button (click)="login()" ion-button full color="dark">Login</button> -->
+    <!-- <button (click)="save()" ion-button full color="dark">Save</button> -->
 
 </ion-content>
